Modifications for cal version 0.16.x

--- a/views/templates/match_event.html
+++ b/views/templates/match_event.html
@@ -80,6 +80,21 @@ usw.
 ###TEMPLATE_PHPICALENDAR_EVENT_YEAR###
 
 
+<!-- Listenansicht gerade  -->
+###TEMPLATE_PHPICALENDAR_EVENT_LIST_EVEN###
+<div class="match-single-item">
+<h2>###MATCH_COMPETITION_NAME###</h2>
+###MATCH_HOME_NAME### - ###MATCH_GUEST_NAME###
+</div>
+###TEMPLATE_PHPICALENDAR_EVENT_LIST_EVEN###
+<!-- Listenansicht ungerade  -->
+###TEMPLATE_PHPICALENDAR_EVENT_LIST_ODD###
+<div class="match-single-item">
+<h2>###MATCH_COMPETITION_NAME###</h2>
+###MATCH_HOME_NAME### - ###MATCH_GUEST_NAME###
+</div>
+###TEMPLATE_PHPICALENDAR_EVENT_LIST_ODD###
+
 
 
 <!-- Wahrscheinlich die Einzelansicht des Kalenders -->
