Paar zusätzliche Daten anzeigen

--- a/views/templates/teamlist.html
+++ b/views/templates/teamlist.html
@@ -34,6 +34,10 @@ formatiert werden. Beispiele:
 <!-- ###TEAM### begin entry for single team -->
 <div id="cfcleague-teamview">
   <h2>###TEAM_LOGO### ###TEAM_NAME### (###TEAM_AGEGROUP_NAME###) ###TEAM_LINK###(Infos)###TEAM_LINK###</h2>
+  <p>Verein: ###TEAM_CLUB_NAME###<br />
+  Webseite: ###TEAM_CLUB_ADDRESS_WWW###<br />
+  Mail: ###TEAM_CLUB_ADDRESS_EMAIL###
+  </p>
 
 </div>
 <!-- ###TEAM### end -->
