Neuer Spielstatus: verlegt

--- a/views/templates/matchtable.html
+++ b/views/templates/matchtable.html
@@ -45,6 +45,10 @@ für die Gastmannschaft.
 - : -
 <!-- ###RESULT_STATUS_0### Ergebnis vor dem Spiel -->
 
+<!-- ###RESULT_STATUS_-10### Ergebnis bei Spielverlegung -->
+verlegt
+<!-- ###RESULT_STATUS_-10### Ergebnis bei Spielverlegung -->
+
 <!-- ###RESULT_STATUS_1### Ergebnis während des Spiels -->
 ###MATCH_GOALS_HOME### : ###MATCH_GOALS_GUEST###
 <!-- ###RESULT_STATUS_1### Ergebnis während des Spiels -->
