CSS-Klasse für Tabelle

--- a/views/templates/matchcrosstable.html
+++ b/views/templates/matchcrosstable.html
@@ -16,7 +16,7 @@
 </table>
 
 ###CROSSTABLE###
-<table border="1">
+<table border="1" class="cfcleague-matchcrosstable">
 ###HEADLINE###
 <tr><th> -- </th>###TEAM###<th>###TEAM_SHORT_NAME###</th>###TEAM###</tr>
 ###HEADLINE###
