more css IDs defined

--- a/views/templates/matchreport.html
+++ b/views/templates/matchreport.html
@@ -30,29 +30,29 @@
 <th colspan="2">Die Aufstellungen</th>
 </tr>
 <tr>
-<td>###MATCH_LINEUP_HOME###</td>
-<td>###MATCH_LINEUP_GUEST###</td>
+<td id="cfcleague-report-lineup-home">###MATCH_LINEUP_HOME###</td>
+<td id="cfcleague-report-lineup-guest">###MATCH_LINEUP_GUEST###</td>
 </tr>
 <tr>
 <th colspan="2">Auf der Auswechselbank</th>
 </tr>
 <tr>
-<td>###MATCH_SUBSTNAMES_HOME###</td>
-<td>###MATCH_SUBSTNAMES_GUEST###</td>
+<td id="cfcleague-report-subst-home">###MATCH_SUBSTNAMES_HOME###</td>
+<td id="cfcleague-report-subst-guest">###MATCH_SUBSTNAMES_GUEST###</td>
 </tr>
 <tr>
 <th colspan="2">Die Trainer</th>
 </tr>
 <tr>
-<td>###MATCH_COACHNAMES_HOME###</td>
-<td>###MATCH_COACHNAMES_GUEST###</td>
+<td id="cfcleague-report-coach-home">###MATCH_COACHNAMES_HOME###</td>
+<td id="cfcleague-report-coach-guest">###MATCH_COACHNAMES_GUEST###</td>
 </tr>
 <tr>
 <th colspan="2">So fielen die Tore</th>
 </tr>
 <tr>
-<td>###MATCH_SCORERHOME###</td>
-<td>###MATCH_SCORERGUEST###</td>
+<td id="cfcleague-report-scorer-home">###MATCH_SCORERHOME###</td>
+<td id="cfcleague-report-scorer-guest">###MATCH_SCORERGUEST###</td>
 </tr>
 </table>
 
