--- a/views/templates/teamlist.html
+++ b/views/templates/teamlist.html
@@ -31,16 +31,50 @@ formatiert werden. Beispiele:
 </pre>
 
 <!-- ###TEAM_LIST### begin-->
+
+<!-- ###TEAMS### begin entry for team list -->
 <!-- ###TEAM### begin entry for single team -->
 <div id="cfcleague-teamview">
   <h2>###TEAM_LOGO### ###TEAM_NAME### (###TEAM_AGEGROUP_NAME###) ###TEAM_LINK###(Infos)###TEAM_LINK###</h2>
   <p>Verein: ###TEAM_CLUB_NAME###<br />
   Webseite: ###TEAM_CLUB_ADDRESS_WWW###<br />
-  Mail: ###TEAM_CLUB_ADDRESS_EMAIL###
+  Mail: ###TEAM_CLUB_ADDRESS_EMAIL###<br />
   </p>
 
 </div>
 <!-- ###TEAM### end -->
+
+
+<!-- ###PAGEBROWSER### START -->
+<div class="t3sports-pagebrowser">
+###PAGEBROWSER_CURRENT_PAGE###
+Seite ###PAGEBROWSER_CURRENT_PAGE_NUMBER###
+###PAGEBROWSER_CURRENT_PAGE###
+
+###PAGEBROWSER_NORMAL_PAGE###
+###PAGEBROWSER_NORMAL_PAGE_LINK###Seite ###PAGEBROWSER_NORMAL_PAGE_NUMBER### ###PAGEBROWSER_NORMAL_PAGE_LINK###
+###PAGEBROWSER_NORMAL_PAGE###
+
+###PAGEBROWSER_PREV_PAGE###
+&nbsp;###PAGEBROWSER_PREV_PAGE_LINK###<###PAGEBROWSER_PREV_PAGE_LINK###&nbsp;
+###PAGEBROWSER_PREV_PAGE###
+
+###PAGEBROWSER_NEXT_PAGE###
+&nbsp;###PAGEBROWSER_NEXT_PAGE_LINK###>###PAGEBROWSER_NEXT_PAGE_LINK###&nbsp;
+###PAGEBROWSER_NEXT_PAGE###
+
+###PAGEBROWSER_FIRST_PAGE###
+###PAGEBROWSER_FIRST_PAGE_LINK### |< ###PAGEBROWSER_FIRST_PAGE_LINK###
+###PAGEBROWSER_FIRST_PAGE###
+
+###PAGEBROWSER_LAST_PAGE###
+###PAGEBROWSER_LAST_PAGE_LINK### >| ###PAGEBROWSER_LAST_PAGE_LINK###
+###PAGEBROWSER_LAST_PAGE###
+
+</div>
+<!-- ###PAGEBROWSER### END -->
+
+<!-- ###TEAMS### end -->
 
 <!-- ###TEAM_LIST### end -->
 </body>
