Template changed for ListMarker.

--- a/views/templates/matchtable.html
+++ b/views/templates/matchtable.html
@@ -28,11 +28,12 @@ für die Gastmannschaft.
 </p>
 
 <!-- ###MATCHTABLE### start -->
+###MATCHS###
 <table cellspacing="0" cellpadding="0" class="cfcleague-matchtable">
 
 ###MATCH###
 <tr class="cfcleague-matchtable-row###MATCH_ROLL### cfcleague-matchtable-rowinfo">
-<td colspan="10">###MATCH_DATE### (###MATCH_COMPETITION_NAME###)</td>
+<td colspan="10">###MATCH_DATE### (###MATCH_COMPETITION_SHORT_NAME###)</td>
 </tr>
 <tr class="cfcleague-matchtable-row###MATCH_ROLL### cfcleague-matchtable-rowmatch">
 <td>###MATCH_ROUND_NAME###</td>
@@ -58,7 +59,7 @@ verlegt
 <!-- ###RESULT_STATUS_2### Ergebnis nach Spielende -->
 </td>
 </tr>
-###MATCH###
+
 
 <!-- ###MATCH_FREE### Team hat spielfrei -->
 <tr class="cfcleague-matchtable-row###MATCH_ROLL### cfcleague-matchtable-rowinfo">
@@ -77,8 +78,12 @@ verlegt
 
 <!-- ###MATCH_FREE### Team hat spielfrei -->
 
+###MATCH###
+
+
 </table>
 ###MATCHCOUNT### Spiele gefunden.
+###MATCHS###
 
 <!-- ###MATCHTABLE### end -->
 </body>
