Show Player UID

--- a/views/templates/teamview.html
+++ b/views/templates/teamview.html
@@ -54,7 +54,7 @@ formatiert werden. Beispiele:
     <!-- ###TEAM_PLAYER### begin -->
    <tr class="cfcleaguefe-teamview-player">
     <td>###TEAM_PLAYER_POSITION### ###TEAM_PLAYER_FIRST_PICTURE###</td>
-    <td>###TEAM_PLAYER_LINK######TEAM_PLAYER_LAST_NAME###, ###TEAM_PLAYER_FIRST_NAME######TEAM_PLAYER_LINK###</td>
+    <td>###TEAM_PLAYER_LINK######TEAM_PLAYER_LAST_NAME###, ###TEAM_PLAYER_FIRST_NAME######TEAM_PLAYER_LINK### (###TEAM_PLAYER_UID###)</td>
     <td>###TEAM_PLAYER_BIRTHDAY###</td>
     <td>###TEAM_PLAYER_HEIGHT###</td>
     <td>###TEAM_PLAYER_WEIGHT###</td>
