Link-Marker changed

--- a/views/templates/matchcrosstable.html
+++ b/views/templates/matchcrosstable.html
@@ -18,11 +18,11 @@
 ###CROSSTABLE###
 <table border="1" class="cfcleague-matchcrosstable">
 ###HEADLINE###
-<tr><th> -- </th>###TEAM###<th>###TEAM_SHORT_NAME###</th>###TEAM###</tr>
+<tr><th> -- </th>###TEAM###<th>###TEAM_SHOWTEAMLINK### ###TEAM_SHORT_NAME### ###TEAM_SHOWTEAMLINK###</th>###TEAM###</tr>
 ###HEADLINE###
 
 ###DATALINE###
-<tr><th>###DATALINE_TEAM_LOGO######DATALINE_TEAM_NAME###</th>###MATCH###<td>
+<tr><th>###DATALINE_TEAM_SHOWTEAMLINK######DATALINE_TEAM_LOGO######DATALINE_TEAM_NAME######DATALINE_TEAM_SHOWTEAMLINK###</th>###MATCH###<td>
 
 <!-- ###RESULT_STATUS_0### Ergebnis vor dem Spiel -->
 ###MATCH_DATE###
