--- a/views/templates/teamlist.html
+++ b/views/templates/teamlist.html
@@ -35,7 +35,7 @@ formatiert werden. Beispiele:
 <!-- ###TEAMS### begin entry for team list -->
 <!-- ###TEAM### begin entry for single team -->
 <div id="cfcleague-teamview">
-  <h2>###TEAM_LOGO### ###TEAM_NAME### (###TEAM_AGEGROUP_NAME###) ###TEAM_LINK###(Infos)###TEAM_LINK###</h2>
+  <h2>###TEAM_LOGO### ###TEAM_NAME### (###TEAM_AGEGROUP_NAME###) (###TEAM_SHOWTEAMLINK###Infos###TEAM_SHOWTEAMLINK###) (###TEAM_SHOWMATCHTABLELINK###Spielplan###TEAM_SHOWMATCHTABLELINK###)</h2>
   <p>Verein: ###TEAM_CLUB_NAME###<br />
   Webseite: ###TEAM_CLUB_ADDRESS_WWW###<br />
   Mail: ###TEAM_CLUB_ADDRESS_EMAIL###<br />
