--- a/views/templates/teamview.html
+++ b/views/templates/teamview.html
@@ -54,7 +54,7 @@ formatiert werden. Beispiele:
     <!-- ###TEAM_PLAYER### begin -->
    <tr class="cfcleaguefe-teamview-player">
     <td>###TEAM_PLAYER_POSITION### ###TEAM_PLAYER_FIRST_PICTURE###</td>
-    <td>###TEAM_PLAYER_LINK######TEAM_PLAYER_LAST_NAME###, ###TEAM_PLAYER_FIRST_NAME######TEAM_PLAYER_LINK### (###TEAM_PLAYER_UID###)</td>
+    <td>###TEAM_PLAYER_SHOWPROFILELINK######TEAM_PLAYER_LAST_NAME###, ###TEAM_PLAYER_FIRST_NAME######TEAM_PLAYER_SHOWPROFILELINK### (###TEAM_PLAYER_UID###)</td>
     <td>###TEAM_PLAYER_BIRTHDAY###</td>
     <td>###TEAM_PLAYER_HEIGHT###</td>
     <td>###TEAM_PLAYER_WEIGHT###</td>
@@ -76,7 +76,7 @@ formatiert werden. Beispiele:
    </tr>
     <!-- ###TEAM_COACH### begin -->
    <tr class="cfcleaguefe-teamview-coach">
-    <td>###TEAM_COACH_LINK######TEAM_COACH_LAST_NAME###, ###TEAM_COACH_FIRST_NAME######TEAM_COACH_LINK###</td>
+    <td>###TEAM_COACH_SHOWPROFILELINK######TEAM_COACH_LAST_NAME###, ###TEAM_COACH_FIRST_NAME######TEAM_COACH_SHOWPROFILELINK###</td>
     <td>###TEAM_COACH_BIRTHDAY###</td>
    </tr>
     <!-- ###TEAM_COACH### end -->
@@ -95,7 +95,7 @@ formatiert werden. Beispiele:
    </tr>
     <!-- ###TEAM_SUPPORTER### begin -->
    <tr class="cfcleaguefe-teamview-coach">
-    <td>###TEAM_SUPPORTER_LINK######TEAM_SUPPORTER_LAST_NAME###, ###TEAM_SUPPORTER_FIRST_NAME######TEAM_SUPPORTER_LINK### (###TEAM_SUPPORTER_POSITION###)</td>
+    <td>###TEAM_SUPPORTER_SHOWPROFILELINK######TEAM_SUPPORTER_LAST_NAME###, ###TEAM_SUPPORTER_FIRST_NAME######TEAM_SUPPORTER_SHOWPROFILELINK### (###TEAM_SUPPORTER_POSITION###)</td>
     <td>###TEAM_SUPPORTER_BIRTHDAY###</td>
    </tr>
     <!-- ###TEAM_SUPPORTER### end -->
