Links markers changed

--- a/views/templates/leaguetable.html
+++ b/views/templates/leaguetable.html
@@ -78,7 +78,7 @@ Hinweis: Per TS können die Links und URLs zusätzlich gewrapped werden wobei ak
 ###ROW###
 <tr class="cfcleague-leaguetable-row###ROW_ROLL### ###ROW_MARKCLUB### cfcleague-leaguetable-row_###ROW_MARK###">
   <td>###ROW_POSITION###.</td>
-  <td>###ROW_LOGO### ###ROW_LINK######ROW_NAME######ROW_PENALTIES######ROW_LINK###</td>
+  <td>###ROW_LOGO### ###ROW_SHOWTEAMLINK######ROW_NAME######ROW_PENALTIES######ROW_SHOWTEAMLINK### (###ROW_SHOWMATCHTABLELINK######LABEL_MATCHTABLE######ROW_SHOWMATCHTABLELINK###)</td>
   <td>###ROW_MATCHCOUNT###</td>
   <td>###ROW_WINCOUNT###</td>
   <td>###ROW_DRAWCOUNT###</td>
