--- a/views/templates/matchcrosstable.html
+++ b/views/templates/matchcrosstable.html
@@ -37,7 +37,7 @@ verlegt
 <!-- ###RESULT_STATUS_1### Ergebnis während des Spiels -->
 
 <!-- ###RESULT_STATUS_2### Ergebnis nach Spielende -->
-###MATCH_LINK######MATCH_GOALS_HOME### : ###MATCH_GOALS_GUEST######MATCH_LINK###
+###MATCH_REPORTLINK######MATCH_GOALS_HOME### : ###MATCH_GOALS_GUEST######MATCH_REPORTLINK###
 <!-- ###RESULT_STATUS_2### Ergebnis nach Spielende -->
 
 
