Template changed for list builder

--- a/views/templates/livetickerlist.html
+++ b/views/templates/livetickerlist.html
@@ -14,6 +14,7 @@ Markers
 ###LIVETICKER_VIEW###
 <div id="cfcleague-tickerlist">
 <h2>Der Liveticker berichtet vom Spiel</h2>
+###MATCHS###
 <table>
 ###MATCH###
 <tr><td colspan="10">###MATCH_DATE###</td></tr>
@@ -21,9 +22,10 @@ Markers
 <td>###MATCH_HOME_LOGO###<br />###MATCH_HOME_NAME###</td>
 <td>###MATCH_GUEST_LOGO###<br />###MATCH_GUEST_NAME###</td></tr>
 <tr><td colspan="10">###MATCH_STADIUM###</td></tr>
-<tr><td colspan="10">###MATCH_TICKER_LINK###Zum Ticker###MATCH_TICKER_LINK###</td></tr>
+<tr><td colspan="10">###MATCH_TICKERLINK###Zum Ticker###MATCH_TICKERLINK###</td></tr>
 ###MATCH###
 </table>
+###MATCHS###
 </div>
 ###LIVETICKER_VIEW###
 
