MatchCrossTable supports now match lists

--- a/views/templates/matchcrosstable.html
+++ b/views/templates/matchcrosstable.html
@@ -22,7 +22,10 @@
 ###HEADLINE###
 
 ###DATALINE###
-<tr><th>###DATALINE_TEAM_SHOWTEAMLINK######DATALINE_TEAM_LOGO######DATALINE_TEAM_NAME######DATALINE_TEAM_SHOWTEAMLINK###</th>###MATCH###<td>
+<tr><th>###DATALINE_TEAM_SHOWTEAMLINK######DATALINE_TEAM_LOGO######DATALINE_TEAM_NAME######DATALINE_TEAM_SHOWTEAMLINK###</th>
+###MATCHS###
+<td>
+###MATCH###
 
 <!-- ###RESULT_STATUS_0### Ergebnis vor dem Spiel -->
 ###MATCH_DATE###
@@ -39,9 +42,12 @@ verlegt
 <!-- ###RESULT_STATUS_2### Ergebnis nach Spielende -->
 ###MATCH_REPORTLINK######MATCH_GOALS_HOME### : ###MATCH_GOALS_GUEST######MATCH_REPORTLINK###
 <!-- ###RESULT_STATUS_2### Ergebnis nach Spielende -->
+###MATCH###
 
+</td>
+###MATCHS###
+</tr>
 
-</td>###MATCH###</tr>
 ###DATALINE###
 </table>
 ###CROSSTABLE###
