--- a/views/templates/matchtable.html
+++ b/views/templates/matchtable.html
@@ -35,7 +35,7 @@ für die Gastmannschaft.
 
 ###MATCH###
 <tr class="cfcleague-matchtable-row###MATCH_ROLL### cfcleague-matchtable-rowinfo">
-<td colspan="10">###MATCH_DATE### (###MATCH_COMPETITION_SHORT_NAME###)</td>
+<td colspan="10">###MATCH_DATE### (###MATCH_COMPETITION_SHORT_NAME###)(###MATCH_UID###)</td>
 </tr>
 <tr class="cfcleague-matchtable-row###MATCH_ROLL### cfcleague-matchtable-rowmatch">
 <td>###MATCH_ROUND_NAME###</td>
@@ -65,16 +65,16 @@ verlegt
 
 <!-- ###MATCH_FREE### Team hat spielfrei -->
 <tr class="cfcleague-matchtable-row###MATCH_ROLL### cfcleague-matchtable-rowinfo">
-<td colspan="10">Spielfrei (###MATCH_COMPETITION_NAME###)</td>
+<td colspan="10">###MATCH_DATE### Spielfrei (###MATCH_COMPETITION_NAME###)</td>
 </tr>
 <tr class="cfcleague-matchtable-row###MATCH_ROLL### cfcleague-matchtable-rowmatch">
 <td>###MATCH_ROUND_NAME###</td>
 <td>
-###MATCH_HOME_LOGO### ###MATCH_HOME_LINK######MATCH_HOME_NAME######MATCH_HOME_LINK### 
+###MATCH_HOME_LOGO### ###MATCH_HOME_SHOWTEAMLINK######MATCH_HOME_NAME######MATCH_HOME_SHOWTEAMLINK### 
 ###MATCH_GUEST_SHOWTEAMLINK######MATCH_GUEST_NAME######MATCH_GUEST_SHOWTEAMLINK### ###MATCH_GUEST_LOGO###</td>
 <td>-</td>
 <td>spielfrei</td>
-<td class="cfcleague-matchtable-result">
+<td class="cfcleague-matchtable-result">&nbsp;
 </td>
 </tr>
 
