--- a/views/templates/profileview.html
+++ b/views/templates/profileview.html
@@ -90,7 +90,7 @@ Seite ###PAGEBROWSER_CURRENT_PAGE_NUMBER###
 
 <table style="width:480px">
 <tr>
-  <td rowspan="20" style="vertical-align:top">###PROFILE_FIRST_PICTURE###</td>
+  <td rowspan="20" style="vertical-align:top">###PROFILE_FIRST_PICTURE_IMGTAG###</td>
   <td class="prof_head">Geburtsdatum:</td>
   <td class="prof_value">###PROFILE_BIRTHDAY###</td>
 </tr>
