Image-tag in profile-list fixed

--- a/views/templates/profileview.html
+++ b/views/templates/profileview.html
@@ -28,7 +28,7 @@
 <!-- ###PROFILES### start-->
 <!-- ###PROFILE### start-->
 <tr>
-  <td>###PROFILE_SHOWPROFILELINK######PROFILE_LAST_NAME###, ###PROFILE_FIRST_NAME######PROFILE_SHOWPROFILELINK### ###PROFILE_FIRST_PICTURE###</td>
+  <td>###PROFILE_SHOWPROFILELINK######PROFILE_LAST_NAME###, ###PROFILE_FIRST_NAME######PROFILE_SHOWPROFILELINK### ###PROFILE_FIRST_PICTURE_IMGTAG###</td>
   <td>###PROFILE_BIRTHDAY###</td>
   <td>###PROFILE_SUMMARY###</td>
 </tr>
