Image-tag in team-list fixed

--- a/views/templates/teamlist.html
+++ b/views/templates/teamlist.html
@@ -7,7 +7,7 @@
 <pre>
 Verfügbare Tags für Bilder:
 
-###TEAM_FIRST_PICTURE### Das erste Bild in der Bildliste
+###TEAM_FIRST_PICTURE_IMGTAG### Das erste Bild in der Bildliste
 ###TEAM_FIRST_PICTURE_CAPTION### Der Infotext des Bilds
 ###TEAM_FIRST_PICTURE_DESCRIPTION### Beschreibung des Bilds
 ###TEAM_PLAYER_FIRST_PICTURE### Das erste Bild des Spielers
