_IMGTAG added in teamview template

--- a/views/templates/teamview.html
+++ b/views/templates/teamview.html
@@ -109,7 +109,7 @@ formatiert werden. Beispiele:
   Weitere Bilder (nur testweise)
   <!-- ###TEAM_PICTURES_2### begin -->
   <div class="cfcleaguefe-teamview-picture">
-  ###TEAM_PICTURE### <br>###TEAM_PICTURE_TITLE###
+  ###TEAM_PICTURE_IMGTAG### <br>###TEAM_PICTURE_TITLE###
   </div>
   <!-- ###TEAM_PICTURES_2### end -->
   <!-- ###TEAM_PICTURES### end -->
