Liveticker author included in matchreport

--- a/views/templates/matchreport.html
+++ b/views/templates/matchreport.html
@@ -74,6 +74,7 @@
 
 <h2>Das Spielstenogramm</h2>
 <div id="cfcleague-report-ticker">
+ <div id="cfcleague-report-ticker-author">###MATCH_LIVETICKER_AUTHOR###</div>
 ###MATCH_TICKERLIST###
 </div>
 
