Subpart ###ROWS### added

--- a/views/templates/leaguetable_teaser.html
+++ b/views/templates/leaguetable_teaser.html
@@ -21,6 +21,7 @@ zugegriffen werden. Dieses Template liegt also nur als kleines Beispiel bei.
 
 <!-- ###LEAGUE_TABLE### start -->
 <div class="cfcleague-teaser">
+###ROWS###
 ###ROW###
 
 <p class="###ROW_MARKCLUB###">
@@ -28,6 +29,7 @@ zugegriffen werden. Dieses Template liegt also nur als kleines Beispiel bei.
 </p>
 
 ###ROW###
+###ROWS###
 </div>
 <!-- ###LEAGUE_TABLE### end -->
 
