Ausgabe der addinfo aus dem Spieldatensatz

--- a/views/templates/matchtable.html
+++ b/views/templates/matchtable.html
@@ -45,7 +45,7 @@ für die Gastmannschaft.
 <td class="cfcleague-matchtable-result">
 
 <!-- ###RESULT_STATUS_0### Ergebnis vor dem Spiel -->
-- : -
+-&nbsp;:&nbsp;-
 <!-- ###RESULT_STATUS_0### Ergebnis vor dem Spiel -->
 
 <!-- ###RESULT_STATUS_-10### Ergebnis bei Spielverlegung -->
@@ -53,12 +53,13 @@ verlegt
 <!-- ###RESULT_STATUS_-10### Ergebnis bei Spielverlegung -->
 
 <!-- ###RESULT_STATUS_1### Ergebnis während des Spiels -->
-###MATCH_GOALS_HOME### : ###MATCH_GOALS_GUEST###
+###MATCH_GOALS_HOME###&nbsp;:&nbsp;###MATCH_GOALS_GUEST###
 <!-- ###RESULT_STATUS_1### Ergebnis während des Spiels -->
 
 <!-- ###RESULT_STATUS_2### Ergebnis nach Spielende -->
-###MATCH_REPORTLINK######MATCH_GOALS_HOME### : ###MATCH_GOALS_GUEST######MATCH_REPORTLINK###
+###MATCH_REPORTLINK######MATCH_GOALS_HOME###&nbsp;:&nbsp;###MATCH_GOALS_GUEST######MATCH_REPORTLINK###
 <!-- ###RESULT_STATUS_2### Ergebnis nach Spielende -->
+<br />###MATCH_ADDINFO###
 </td>
 </tr>
 
