It is possible again to output group name by marker.

--- a/views/templates/matchtable.html
+++ b/views/templates/matchtable.html
@@ -9,20 +9,20 @@
 <pre>
 ###MATCH### Subpart für ein Spiel
 ###MATCH_ROLL### Marker für den Typ einer Zeile. Dies ist eine laufende Nummer bei 0 beginnend und leaguetable.table.rowroll endend.
-###MATCH_POSITION_MARK### Marker für spezielle Markierung einer Tabellenposition aus Wettbewerbsdatensatz
-###MATCH_POSITION### Marker für Tabellenplatz
-###MATCH_HOME### Marker für UID des Heimteams
+###MATCH_HOME_UID### Marker für UID des Heimteams
 ###MATCH_HOME_NAME### Marker für Name des Heimteams
 ###MATCH_HOME_SHORT_NAME### Marker für Kurzname des Heimteams
 ###MATCH_HOME_SHOWTEAMLINK### Subpart für Link auf das Heimteam
 ###MATCH_HOME_LOGO### Marker für das Logo des Heimteams
 ###MATCHCOUNT### Marker für Anzahl der Spiele
 ###MATCH_COMPETITION_NAME### Marker für Name des Wettbewerbs
+###MATCH_COMPETITION_GROUP_NAME### Marker für Name der Altersgruppe
 ###MATCH_DATE### Marker für Datum des Spiels
 ###MATCH_GOALS_HOME### Marker für Tore des Heimteams nach Spielende
 ###MATCH_GOALS_GUEST### Marker für Tore des Gastteams nach Spielende
 ###MATCH_REPORTLINK### Marker für Link zum Spielbericht
 ###MATCH_TICKERLINK### Marker für Link zum Liveticker
+###MATCH_GUEST_SHOWTEAMLINK### Link auf die Gastmannschaft
 
 </pre>
 <p>Weitere Marker ergeben sich aus den obigen Beispielen. Statt HOME verwendet man z.B. GUEST
