--- a/views/templates/teamlist.html
+++ b/views/templates/teamlist.html
@@ -28,6 +28,11 @@ formatiert werden. Beispiele:
 ###TEAM_COMMENT### Bemerkung zum Team
 ###TEAM_LOGO### Logo des Teams
 ###TEAM_AGEGROUP_NAME### Name der Altersklasse des Teams
+Daten des Vereins beginnen mit ###TEAM_CLUB_...###, z.B.:
+###TEAM_CLUB_NAME### Vereinsname
+###TEAM_CLUB_EMAIL### Mailadresse
+###TEAM_CLUB_WWW### Webadresse
+
 </pre>
 
 <!-- ###TEAM_LIST### begin-->
@@ -37,8 +42,8 @@ formatiert werden. Beispiele:
 <div id="cfcleague-teamview">
   <h2>###TEAM_LOGO### ###TEAM_NAME### (###TEAM_AGEGROUP_NAME###) (###TEAM_SHOWTEAMLINK###Infos###TEAM_SHOWTEAMLINK###) (###TEAM_SHOWMATCHTABLELINK###Spielplan###TEAM_SHOWMATCHTABLELINK###)</h2>
   <p>Verein: ###TEAM_CLUB_NAME###<br />
-  Webseite: ###TEAM_CLUB_ADDRESS_WWW###<br />
-  Mail: ###TEAM_CLUB_ADDRESS_EMAIL###<br />
+  Webseite: ###TEAM_CLUB_WWW###<br />
+  Mail: ###TEAM_CLUB_EMAIL###<br />
   </p>
 
 </div>
