--- a/views/templates/matchreport.html
+++ b/views/templates/matchreport.html
@@ -97,20 +97,24 @@
 
 ###MARKERMODULE__CHARTMATCH###
 
-<!-- ###MARKERMODULE__MATCHHISTORY### -->
+###MARKERMODULE__MATCHHISTORY###
 
-###HISTMATCHS###
+###MATCHREPORT###
+
+
+###HISTORIC_MATCHES###
+###MATCHS###
 <table cellspacing="0" cellpadding="0" class="cfcleague-matchtable">
 
-###HISTMATCH###
+###MATCH###
 <tr class="cfcleague-matchtable-row###MATCH_ROLL### cfcleague-matchtable-rowinfo">
-<td colspan="10">###HISTMATCH_DATE### (###HISTMATCH_COMPETITION_SHORT_NAME###)(###HISTMATCH_UID###)</td>
+<td colspan="10">###MATCH_DATE### (###MATCH_COMPETITION_NAME###)</td>
 </tr>
 <tr class="cfcleague-matchtable-row###MATCH_ROLL### cfcleague-matchtable-rowmatch">
-<td>###HISTMATCH_ROUND_NAME###</td>
-<td>###HISTMATCH_HOME_SHOWTEAMLINK######HISTMATCH_HOME_NAME######HISTMATCH_HOME_SHOWTEAMLINK###</td>
+<td>###MATCH_ROUND_NAME###</td>
+<td>###MATCH_HOME_SHOWTEAMLINK######MATCH_HOME_NAME######MATCH_HOME_SHOWTEAMLINK###</td>
 <td>-</td>
-<td>###HISTMATCH_GUEST_SHOWTEAMLINK######HISTMATCH_GUEST_NAME######HISTMATCH_GUEST_SHOWTEAMLINK### </td>
+<td>###MATCH_GUEST_SHOWTEAMLINK######MATCH_GUEST_NAME######MATCH_GUEST_SHOWTEAMLINK### </td>
 <td class="cfcleague-matchtable-result">
 
 <!-- ###RESULT_STATUS_0### Ergebnis vor dem Spiel -->
@@ -122,23 +126,18 @@ verlegt
 <!-- ###RESULT_STATUS_-10### Ergebnis bei Spielverlegung -->
 
 <!-- ###RESULT_STATUS_1### Ergebnis während des Spiels -->
-###HISTMATCH_GOALS_HOME###&nbsp;:&nbsp;###HISTMATCH_GOALS_GUEST###
+###MATCH_GOALS_HOME###&nbsp;:&nbsp;###MATCH_GOALS_GUEST###
 <!-- ###RESULT_STATUS_1### Ergebnis während des Spiels -->
 
 <!-- ###RESULT_STATUS_2### Ergebnis nach Spielende -->
-###HISTMATCH_REPORTLINK######HISTMATCH_GOALS_HOME###&nbsp;:&nbsp;###HISTMATCH_GOALS_GUEST######HISTMATCH_REPORTLINK###
+###MATCH_REPORTLINK######MATCH_GOALS_HOME###&nbsp;:&nbsp;###MATCH_GOALS_GUEST######MATCH_REPORTLINK###
 <!-- ###RESULT_STATUS_2### Ergebnis nach Spielende -->
-<br />###HISTMATCH_ADDINFO###
+<br />###MATCH_ADDINFO###
 </td>
 </tr>
-###HISTMATCH###
+###MATCH###
 </table>
-###HISTMATCHS###
-<!-- ###MARKERMODULE__MATCHHISTORY###  -->
-
-
-###MATCHREPORT###
-
+###MATCHS###
 
 ###HISTORIC_MATCHES###
 
