Output of profiles in Team-View changed. This is now full configureable.

--- a/views/templates/teamview.html
+++ b/views/templates/teamview.html
@@ -40,7 +40,7 @@ Wenn in der Teamnotiz also den Marker "position" definiert ist, dann gilt dieser
 <div id="cfcleague-teamview">
 
   <h1>###TEAM_FIRST_PICTURE_TITLE### (###LABEL_team###)</h1>
-
+###TEAM_LOGO###
 <p class="cfcleague-teamview-firstpic">###TEAM_FIRST_PICTURE_IMGTAG###</p>
 <p class="cfcleague-teamview-firstpic-creator">###TEAM_FIRST_PICTURE_CREATOR###</p>
 <p class="cfcleague-teamview-firstpic-description">###TEAM_FIRST_PICTURE_DESCRIPTION###</p>
@@ -61,7 +61,7 @@ Wenn in der Teamnotiz also den Marker "position" definiert ist, dann gilt dieser
    </tr>
     <!-- ###TEAM_PLAYER### begin -->
    <tr class="cfcleaguefe-teamview-player">
-    <td>###TEAM_PLAYER_FIRST_PICTURE_IMGTAG###</td>
+    <td>###TEAM_PLAYER_FIRST_PICTURE_IMGTAG###<br />###TEAM_PLAYER_TNPICTURE###</td>
     <td>###TEAM_PLAYER_TNPOSITION### / ###TEAM_PLAYER_TNTRIKOT###</td>
     <td>###TEAM_PLAYER_SHOWPROFILELINK######TEAM_PLAYER_LAST_NAME###, ###TEAM_PLAYER_FIRST_NAME######TEAM_PLAYER_SHOWPROFILELINK### (###TEAM_PLAYER_UID###)</td>
     <td>###TEAM_PLAYER_BIRTHDAY###</td>
@@ -75,7 +75,7 @@ Wenn in der Teamnotiz also den Marker "position" definiert ist, dann gilt dieser
     ###TEAM_PLAYERS_COMMENT###
   <!-- ###TEAM_PLAYERS### end -->
 
-  <!-- ###TEAM_COACHES### begin -->
+  <!-- ###TEAM_COACHS### begin -->
   <div class="cfcleague-teamview-coaches">
   <h2>Die Trainer</h2>
   <table style="width:483px">
@@ -92,7 +92,7 @@ Wenn in der Teamnotiz also den Marker "position" definiert ist, dann gilt dieser
   </table>
     ###TEAM_COACHES_COMMENT###
   </div>
-  <!-- ###TEAM_COACHES### end -->
+  <!-- ###TEAM_COACHS### end -->
 
   <!-- ###TEAM_SUPPORTERS### begin -->
   <div class="cfcleague-teamview-supporters">
