--- a/views/templates/matchreport.html
+++ b/views/templates/matchreport.html
@@ -15,7 +15,7 @@
 <tr>
 <td class="cfcleague-report-teamname">###MATCH_HOME_NAME###</td>
 <td style="text-align:center">
- Stadion: <b>###MATCH_STADIUM###</b><br />
+ Stadion: <b>###MATCH_ARENA_NAME###</b><br />
  Datum: <b>###MATCH_DATE###</b><br />
  Schiedsrichter: <b>###MATCH_REFEREENAMES###</b><br />
  SRA: <b>###MATCH_ASSISTSNAMES###</b><br />
@@ -86,6 +86,8 @@
 ###MATCH_NOTES###
  -->
 
+	<!--###MATCH_DAM_IMAGES###-->
+
   <!-- ###MATCH_PICTURES### begin -->
   <div id="cfcleague-report-images">
   ###MATCH_FIRST_PICTURE_IMGTAG###
@@ -95,12 +97,17 @@
   </div>
   <!-- ###MATCH_PICTURES### end -->
 
+
+
 ###MARKERMODULE__CHARTMATCH###
 
 ###MARKERMODULE__MATCHHISTORY###
 
 ###MATCHREPORT###
 
+
+
+<h2>Subpart for historic matches</h2>
 
 ###HISTORIC_MATCHES###
 ###MATCHS###
