Display competition logo in matchtable

--- a/views/templates/matchtable.html
+++ b/views/templates/matchtable.html
@@ -16,6 +16,7 @@
 ###MATCH_HOME_LOGO### Marker für das Logo des Heimteams
 ###MATCHCOUNT### Marker für Anzahl der Spiele
 ###MATCH_COMPETITION_NAME### Marker für Name des Wettbewerbs
+###MATCH_COMPETITION_LOGO### Marker für Logo des Wettbewerbs
 ###MATCH_COMPETITION_GROUP_NAME### Marker für Name der Altersgruppe
 ###MATCH_DATE### Marker für Datum des Spiels
 ###MATCH_GOALS_HOME### Marker für Tore des Heimteams nach Spielende
@@ -35,7 +36,7 @@ für die Gastmannschaft.
 
 ###MATCH###
 <tr class="cfcleague-matchtable-row###MATCH_ROLL### cfcleague-matchtable-rowinfo">
-<td colspan="10">###MATCH_DATE### (###MATCH_COMPETITION_SHORT_NAME###)(###MATCH_UID###)</td>
+<td colspan="10">###MATCH_DATE### (###MATCH_COMPETITION_LOGO######MATCH_COMPETITION_SHORT_NAME###)(###MATCH_UID###)</td>
 </tr>
 <tr class="cfcleague-matchtable-row###MATCH_ROLL### cfcleague-matchtable-rowmatch">
 <td>###MATCH_ROUND_NAME###</td>
