#2: Reimplementation of picture output. Examples for Lightbox and Galleriffic added.

--- a/views/templates/matchreport.html
+++ b/views/templates/matchreport.html
@@ -4,6 +4,7 @@
 </head>
 <body>
 
+
 ###MATCHREPORT###
 
 <h2>Der Spielbericht ###MATCH_COMPETITION_NAME### ###MATCH_ROUND_NAME###</h2>
@@ -86,16 +87,9 @@
 ###MATCH_NOTES###
  -->
 
-	<!--###MATCH_DAM_IMAGES###-->
-
-  <!-- ###MATCH_PICTURES### begin -->
   <div id="cfcleague-report-images">
-  ###MATCH_FIRST_PICTURE_IMGTAG###
-  <!-- ###MATCH_PICTURE### begin -->
-  ###MATCH_PICTURE_IMGTAG###
-  <!-- ###MATCH_PICTURE### end -->
+  ###MATCH_PICTURES###
   </div>
-  <!-- ###MATCH_PICTURES### end -->
 
 
 
