--- a/views/templates/teamview.html
+++ b/views/templates/teamview.html
@@ -7,16 +7,17 @@
 <pre>
 Verfügbare Tags für Bilder:
 
+###TEAM_FIRSTPICTURE### Das erste Bild in der Bildliste
+
 ###TEAM_FIRST_PICTURE_IMGTAG### Das erste Bild in der Bildliste
 ###TEAM_FIRST_PICTURE_CAPTION### Der Infotext des Bilds
 ###TEAM_FIRST_PICTURE_DESCRIPTION### Beschreibung des Bilds
-###TEAM_PLAYER_FIRST_PICTURE_IMGTAG### Das erste Bild des Spielers
-###TEAM_PLAYER_PICTURES### Subpart für weitere Bilder der Spieler
-###TEAM_PLAYER_PICTURES_2### Subpart für ein weiteres Bild des Spielers innerhalb der weiteren Bilder
-###TEAM_PLAYER_PICTURE### Marker für ein weiteres Bild innerhalb von ###PLAYER_PICTURES_2###
-###TEAM_COACH_FIRST_PICTURE_IMGTAG### Das erste Bild des Trainers
-###TEAM_SUPPORTER_FIRST_PICTURE_IMGTAG### Das erste Bild eines Betreuers
-Für weitere Team-, Trainer- und Betreuerbilder gelten die gleichen Regeln wie bei den Spielern.
+
+###TEAM_PLAYER_FIRSTPICTURE### Das erste Bild des Spielers
+###TEAM_PLAYER_PICTURES### Weitere Bilder der Spieler
+
+###TEAM_COACH_FIRSTPICTURE### Das erste Bild des Trainers
+###TEAM_SUPPORTER_FIRSTPICTURE### Das erste Bild eines Betreuers
 
 Alle Daten des Teams sind über die Spaltennamen verfügbar und können bei Bedarf auch per TS 
 formatiert werden. Beispiele:
@@ -39,11 +40,9 @@ Wenn in der Teamnotiz also den Marker "position" definiert ist, dann gilt dieser
 <!-- ###TEAM_VIEW### begin-->
 <div id="cfcleague-teamview">
 
-  <h1>###TEAM_FIRST_PICTURE_TITLE### (###LABEL_team###)</h1>
 ###TEAM_LOGO###
-<p class="cfcleague-teamview-firstpic">###TEAM_FIRST_PICTURE_IMGTAG###</p>
-<p class="cfcleague-teamview-firstpic-creator">###TEAM_FIRST_PICTURE_CREATOR###</p>
-<p class="cfcleague-teamview-firstpic-description">###TEAM_FIRST_PICTURE_DESCRIPTION###</p>
+
+<p class="cfcleague-teamview-firstpic">###TEAM_FIRSTPICTURE###</p>
 
 
   <!-- ###TEAM_PLAYERS### begin -->
@@ -61,7 +60,7 @@ Wenn in der Teamnotiz also den Marker "position" definiert ist, dann gilt dieser
    </tr>
     <!-- ###TEAM_PLAYER### begin -->
    <tr class="cfcleaguefe-teamview-player">
-    <td>###TEAM_PLAYER_FIRST_PICTURE_IMGTAG###<br />###TEAM_PLAYER_TNPICTURE###</td>
+    <td>###TEAM_PLAYER_FIRSTPICTURE###<br />###TEAM_PLAYER_TNPICTURE###</td>
     <td>###TEAM_PLAYER_TNPOSITION### / ###TEAM_PLAYER_TNTRIKOT###</td>
     <td>###TEAM_PLAYER_SHOWPROFILELINK######TEAM_PLAYER_LAST_NAME###, ###TEAM_PLAYER_FIRST_NAME######TEAM_PLAYER_SHOWPROFILELINK### (###TEAM_PLAYER_UID###)</td>
     <td>###TEAM_PLAYER_BIRTHDAY###</td>
@@ -114,14 +113,9 @@ Wenn in der Teamnotiz also den Marker "position" definiert ist, dann gilt dieser
   <!-- ###TEAM_SUPPORTERS### end -->
 
 
-  <!-- ###TEAM_PICTURES### begin -->
-  Weitere Bilder (nur testweise)
-  <!-- ###TEAM_PICTURES_2### begin -->
   <div class="cfcleaguefe-teamview-picture">
-  ###TEAM_PICTURE_IMGTAG### <br>###TEAM_PICTURE_TITLE###
+  ###TEAM_PICTURES###
   </div>
-  <!-- ###TEAM_PICTURES_2### end -->
-  <!-- ###TEAM_PICTURES### end -->
 
 </div>
 
