#10: Show clubs in GoogleMap

--- a/views/templates/clublist.html
+++ b/views/templates/clublist.html
@@ -64,6 +64,8 @@ Seite ###PAGEBROWSER_CURRENT_PAGE_NUMBER###
 
 <!-- ###CLUBS### end -->
 
+###CLUBMAP###
+
 <!-- ###CLUB_LIST### end -->
 </body>
 </html>
