#22: New view for club details

--- a/views/templates/clublist.html
+++ b/views/templates/clublist.html
@@ -24,7 +24,7 @@ Einige verfügbare Tags:
 
 <!-- ###CLUB### begin entry for single team -->
 <div id="cfcleague-teamview">
-  <h2>###CLUB_LOGO### ###CLUB_NAME###</h2>
+  <h2>###CLUB_LOGO### ###CLUB_SHOWLINK######CLUB_NAME######CLUB_SHOWLINK###</h2>
   <p>Webseite: ###CLUB_WWW###<br />
   Mail: ###CLUB_EMAIL###<br />
   </p>
@@ -67,5 +67,27 @@ Seite ###PAGEBROWSER_CURRENT_PAGE_NUMBER###
 ###CLUBMAP###
 
 <!-- ###CLUB_LIST### end -->
+
+
+Details-View for clubs
+<!-- ###CLUB_VIEW### begin-->
+
+<div id="t3sports-clubview">
+  <h2>###CLUB_LOGO### ###CLUB_NAME###</h2>
+  <p>Webseite: ###CLUB_WWW###<br />
+  Mail: ###CLUB_EMAIL###<br />
+  </p>
+
+  ###CLUB_STADIUMS###
+  <h3>Stadien:</h3> 
+  ###CLUB_STADIUM###
+  ###CLUB_STADIUM_SHOWLINK######CLUB_STADIUM_NAME######CLUB_STADIUM_SHOWLINK###<br />
+  ###CLUB_STADIUM###
+  ###CLUB_STADIUMS###
+
+</div>
+
+<!-- ###CLUB_VIEW### end-->
+
 </body>
 </html>
