--- a/views/templates/matchreport.html
+++ b/views/templates/matchreport.html
@@ -16,7 +16,7 @@
 <tr>
 <td class="cfcleague-report-teamname">###MATCH_HOME_NAME###</td>
 <td style="text-align:center">
- Stadion: <b>###MATCH_ARENA_NAME###</b><br />
+ Stadion: <b>###MATCH_ARENA_SHOWLINK######MATCH_ARENA_NAME######MATCH_ARENA_SHOWLINK###</b><br />
  Datum: <b>###MATCH_DATE###</b><br />
  Schiedsrichter: <b>###MATCH_REFEREENAMES###</b><br />
  SRA: <b>###MATCH_ASSISTSNAMES###</b><br />
