#23: Add leaguetable to matchreport

--- a/views/templates/matchreport.html
+++ b/views/templates/matchreport.html
@@ -92,12 +92,14 @@
   </div>
 
 
+###MATCH_LEAGUETABLE###
 
-###MARKERMODULE__CHARTMATCH###
+###MATCH_CHARTMATCH###
 
-###MARKERMODULE__MATCHHISTORY###
+###MATCH_MATCHHISTORY###
 
 ###MATCHREPORT###
+
 
 
 
