Clubmarker shows all teams of a club

--- a/views/templates/clublist.html
+++ b/views/templates/clublist.html
@@ -85,6 +85,13 @@ Details-View for clubs
   ###CLUB_STADIUM###
   ###CLUB_STADIUMS###
 
+  ###CLUB_TEAMS###
+  <h3>Teams:</h3> 
+  ###CLUB_TEAM###
+  ###CLUB_TEAM_SHOWTEAMLINK######CLUB_TEAM_NAME### (###CLUB_TEAM_AGEGROUP_NAME###) ###CLUB_TEAM_SHOWTEAMLINK###<br />
+  ###CLUB_TEAM###
+  ###CLUB_TEAMS###
+
 </div>
 
 <!-- ###CLUB_VIEW### end-->
