New view stadium list

--- a/views/templates/stadiums.html
+++ b/views/templates/stadiums.html
@@ -4,10 +4,56 @@
 </head>
 <body>
 
-<pre>
-Verfügbare Tags für Bilder:
 
-</pre>
+<!-- ----------------------------------------
+Template for list view
+------------------------------------------ -->
+
+<!-- ###STADIUM_LIST### begin-->
+
+###STADIUMS###
+###STADIUM###
+<h2>###STADIUM_SHOWLINK######STADIUM_NAME######STADIUM_SHOWLINK###</h2>
+###STADIUM###
+
+<!-- ###PAGEBROWSER### START -->
+<div class="t3sports-pagebrowser">
+###PAGEBROWSER_CURRENT_PAGE###
+Seite ###PAGEBROWSER_CURRENT_PAGE_NUMBER###
+###PAGEBROWSER_CURRENT_PAGE###
+
+###PAGEBROWSER_NORMAL_PAGE###
+###PAGEBROWSER_NORMAL_PAGE_LINK###Seite ###PAGEBROWSER_NORMAL_PAGE_NUMBER### ###PAGEBROWSER_NORMAL_PAGE_LINK###
+###PAGEBROWSER_NORMAL_PAGE###
+
+###PAGEBROWSER_PREV_PAGE###
+&nbsp;###PAGEBROWSER_PREV_PAGE_LINK###<###PAGEBROWSER_PREV_PAGE_LINK###&nbsp;
+###PAGEBROWSER_PREV_PAGE###
+
+###PAGEBROWSER_NEXT_PAGE###
+&nbsp;###PAGEBROWSER_NEXT_PAGE_LINK###>###PAGEBROWSER_NEXT_PAGE_LINK###&nbsp;
+###PAGEBROWSER_NEXT_PAGE###
+
+###PAGEBROWSER_FIRST_PAGE###
+###PAGEBROWSER_FIRST_PAGE_LINK### |< ###PAGEBROWSER_FIRST_PAGE_LINK###
+###PAGEBROWSER_FIRST_PAGE###
+
+###PAGEBROWSER_LAST_PAGE###
+###PAGEBROWSER_LAST_PAGE_LINK### >| ###PAGEBROWSER_LAST_PAGE_LINK###
+###PAGEBROWSER_LAST_PAGE###
+</div>
+<!-- ###PAGEBROWSER### END -->
+###STADIUMS###
+
+
+<!-- ###STADIUM_LIST### begin-->
+
+
+
+<!-- ----------------------------------------
+Template for single view
+------------------------------------------ -->
+
 
 <!-- ###STADIUM_VIEW### begin-->
 <div id="t3sports-stadiumview">
@@ -24,6 +70,7 @@ Verfügbare Tags für Bilder:
 ###STADIUM_PICTURES###
 
 ###STADIUM_DESCRIPTION2###
+
 
 </div>
 <!-- ###STADIUM_VIEW### end -->
